--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "typescript": "^5.4.2"
   },
   "devDependencies": {
-    "@types/node": "^20.11.27"
+    "@types/node": "^20.11.27",
+    "prettier": "^3.2.5"
   }
 }
