--- a/cms/app/site/blueprints/pages/book.yml
+++ b/cms/app/site/blueprints/pages/book.yml
@@ -15,23 +15,40 @@ status:
     label: Published
     text: The entry is online and listed in the blog
 
-sections:
-  files:
-    label: File
-    type: files
-    multiple: false
-    layout: cards
-    size: medium
-    info: "{{ file.description }}"
-    sortable: false
-  meta:
-    type: fields
-    fields:
-      date:
-        type: date
-        time: true
-        default: now
-      author:
-        type: users
-      tags: true
+columns:
+  main:
+    width: 2/3
+    sections:
+      description:
+        type: fields
+        fields:
+          title:
+            label: Title
+            type: text
+          description:
+            label: Description
+            type: textarea
+            size: medium
+      meta:
+        type: fields
+        fields:
+          date:
+            type: date
+            time: true
+            default: now
+          author:
+            label: Published by
+            type: users
+          tags: true
+  sidebar:
+    width: 1/3
+    sections:
+      files:
+        label: File
+        type: files
+        multiple: false
+        layout: cards
+        size: small
+        info: "{{ file.description }}"
+        sortable: false
 
