--- a/cms/apache/default.conf
+++ b/cms/apache/default.conf
@@ -1,9 +1,13 @@
 <VirtualHost *:80>
-ServerName localhost
-# Set the document root
-DocumentRoot "/var/www/html"
-<Directory "/var/www/html">
-# Allow overriding the default configuration via `.htaccess`
-AllowOverride All
-</Directory>
+    ServerName localhost
+    DocumentRoot "/var/www/html"
+    <Directory "/var/www/html">
+        Options Indexes FollowSymLinks MultiViews
+        AllowOverride All
+        Order deny,allow
+        Allow from all
+    </Directory>
+    
+    ErrorLog ${APACHE_LOG_DIR}/error.log
+    CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
