--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
+    "@astrojs/solid-js": "^4.2.0",
     "astro": "^4.8.2",
+    "solid-js": "^1.8.17",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
