--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -10,6 +10,9 @@
       ],
       "@data/*": [
         "src/data/*"
+      ],
+      "@/*": [
+        "src/*"
       ]
     },
     "jsx": "preserve",
